--- a/client/flip/package.json
+++ b/client/flip/package.json
@@ -8,9 +8,9 @@
     "@testing-library/user-event": "13.5.0",
     "axios": "1.1.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^17.0.1",
     "react-redux": "8.0.4",
-    "react-router-dom": "5.1.2",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "5.0.1",
     "web-vitals": "2.1.4"
   },
@@ -39,7 +39,11 @@
     ]
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^1.8.6",
+    "history": "^5.3.0",
     "prettier": "2.7.1",
-    "react-card-flip": "1.1.6"
+    "react-card-flip": "1.1.6",
+    "redux": "^4.2.0",
+    "redux-logger": "^3.0.6"
   }
 }
