--- a/client/flip/package.json
+++ b/client/flip/package.json
@@ -39,10 +39,13 @@
     ]
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "6.2.0",
+    "@fortawesome/free-solid-svg-icons": "6.2.0",
+    "@fortawesome/react-fontawesome": "0.2.0",
     "@reduxjs/toolkit": "^1.8.6",
-    "history": "^5.3.0",
     "prettier": "2.7.1",
     "react-card-flip": "1.1.6",
+    "react-horizontal-scrolling-menu": "3.2.3",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6"
   }
