--- a/client/flip/package.json
+++ b/client/flip/package.json
@@ -47,6 +47,7 @@
     "react-card-flip": "1.1.6",
     "react-horizontal-scrolling-menu": "3.2.3",
     "redux": "^4.2.0",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "redux-persist": "6.0.0"
   }
 }
