--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "npm run test",
-    "seed": "node data/decks-seed.js",
+    "seed": "node data/seed.js",
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node index.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
@@ -30,7 +30,8 @@
     "dotenv": "16.0.3",
     "mongoose": "6.7.0",
     "morgan": "1.10.0",
-    "nodemon": "2.0.20"
+    "nodemon": "2.0.20",
+    "uuid": "9.0.0"
   },
   "dependencies": {
     "express": "4.18.2",
