--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node index.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
-    "client": "cd client && npm run start",
-    "build": "cd client && npm run build"
+    "client": "cd client/flip && npm run start",
+    "build": "cd client/flip && npm run build"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
   "devDependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "1.20.1",
+    "bson": "5.2.0",
     "concurrently": "7.5.0",
     "cors": "2.8.5",
     "dotenv": "16.0.3",
