--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start:prod": "node index.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "client": "cd client && npm run start",
-    "build": "cd client && npm run build"
+    "build": "cd client && npm i --legacy-peer-deps && npm run build"
   },
   "repository": {
     "type": "git",
