--- a/client/package.json
+++ b/client/package.json
@@ -3,19 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "6.2.0",
+    "@fortawesome/free-solid-svg-icons": "6.2.0",
+    "@fortawesome/react-fontawesome": "0.2.0",
     "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "13.5.0",
     "axios": "1.1.3",
+    "prettier": "2.7.1",
     "react": "^18.2.0",
+    "react-card-flip": "1.1.6",
     "react-dom": "^17.0.1",
+    "react-horizontal-scrolling-menu": "3.2.3",
     "react-redux": "8.0.4",
     "react-router-dom": "^5.2.1",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "6.0.0",
+    "uuid": "9.0.0",
     "web-vitals": "2.1.4"
   },
   "scripts": {
@@ -41,14 +48,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@fortawesome/fontawesome-svg-core": "6.2.0",
-    "@fortawesome/free-solid-svg-icons": "6.2.0",
-    "@fortawesome/react-fontawesome": "0.2.0",
-    "prettier": "2.7.1",
-    "react-card-flip": "1.1.6",
-    "react-horizontal-scrolling-menu": "3.2.3",
-    "uuid": "9.0.0"
   }
 }
