--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "6.0.0",
+    "socket.io-client": "4.6.1",
     "uuid": "9.0.0",
     "web-vitals": "2.1.4"
   },
