--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jsonwebtoken": "8.5.1",
     "mongoose": "6.7.0",
     "morgan": "1.10.0",
+    "socket.io": "4.6.1",
     "uuid": "9.0.0"
   },
   "engines": {
