--- a/client/package.json
+++ b/client/package.json
@@ -14,10 +14,10 @@
     "prettier": "2.7.1",
     "react": "^18.2.0",
     "react-card-flip": "1.1.6",
-    "react-dom": "^17.0.1",
+    "react-dom": "^18.2.0",
     "react-horizontal-scrolling-menu": "3.2.3",
     "react-loader-spinner": "5.3.4",
-    "react-redux": "7.2.8",
+    "react-redux": "^8.0.4",
     "react-router-dom": "^5.2.1",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
