--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "bson": "5.2.0",
     "concurrently": "7.5.0",
+    "dayjs": "1.11.10",
     "nodemon": "2.0.20",
     "prettier": "3.0.3"
   },
